# PyUtils

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
pyutils/: __init__.py  service_factory_datetime.py  service_factory_system.py
pyutils/data/: __init__.py  analysis.py
pyutils/database/: __init__.py  connector.py  db_connector.py
pyutils/embedders/: README.md  __init__.py  embedder.py  example.py  rag.py
pyutils/lmstudio/: README.md  __init__.py  example.py  lmstudio.py
pyutils/ollama/: README.md  __init__.py  ollama_collector.py
pyutils/openai/: __init__.py  openai_collector.py
pyutils/scheduler/: __init__.py  scheduler.py
pyutils/service_factory/: __init__.py  anonymizer.py  compresso7z.py  compressor.py  compressor7z.py  datetimer.py  localhost.py  pdf.py  pdf_manager.py
pyutils/web/: README.md  __init__.py  password.py  sucker.py  web_sucker.py  wol.py  youtuber.py
tests/: conftest.py  test_analysis.py  test_connector.py  test_datetimer.py  test_localhost.py  test_ollama_collector.py  test_openai_collector.py  test_password.py  test_pdf.py  test_rag.py  test_scheduler.py  test_sucker.py  test_wol.py  test_youtuber.py
