[metadata]
name = pyutils
version = 0.0.1
author = Andrea Ferrante
author_email = nonicknamethankyou@gmail.com
description = pyutils
long_description = file: README.md
url = https://github.com/AndreaFerrante/PyUtils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
