[metadata]
name = pyutils
version = 0.1.0
author = Andrea Ferrante
author_email = nonicknamethankyou@gmail.com
description = Personal Python utility library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndreaFerrante/PyUtils
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    pandas
    numpy
    openai
    spacy
    tiktoken
    youtube-transcript-api
    PyPDF2
    reportlab
    beautifulsoup4
    requests
    psutil

[options.packages.find]
exclude =
    tests*
